# adl-agent-sdk

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: claude-code-review.yml  claude.yml
agents/: architect.md  developer.md  feedback_applier.md  orchestrator.md  plan_reviewer.md  pr_fixer.md  researcher.md  reviewer.md  security_reviewer.md  tester.md
docs/: 2026-02-27-auto-dev-loop-v3-python-design.md  2026-02-27-workflow-abstraction-design.md  agentic-coding-overview.md  agentsdk-agentteams.md  phase0-reserach.md
docs/plans/: 2026-02-27-telegram-interactive-design.md
src/auto_dev_loop/: _paths.py  add_repo.py  agent_loader.py  agent_query.py  branch.py  (+25 more)
tests/: conftest.py  test_add_repo.py  test_agent_loader.py  test_agent_query.py  test_cli.py  test_comments.py  test_config.py  test_dev_loop.py  test_dispatcher.py  test_hooks.py  test_init_wizard.py  test_integration_workflow.py  test_issue_logging.py  test_main.py  test_model_roles.py  test_models.py  test_multi_model.py  test_orchestrator.py  test_paths.py  test_plan_loop.py  test_poller.py  test_pr_status.py  test_resolve_config.py  test_review_loop.py  test_review_parser.py  test_state.py  test_telegram_callbacks.py  test_telegram_client.py  test_telegram_escalate.py  test_telegram_messages.py  test_telegram_models.py  test_telegram_outbox.py  test_telegram_poller.py  test_telegram_topics.py  test_workflow_engine.py  test_workflow_loader.py  test_workflow_router.py  test_worktrees.py
workflows/: bug_fix.yaml  documentation.yaml  feature.yaml  ops_change.yaml  security_audit.yaml
(+21 files in other folders)
