[project]
name = "auto-dev-loop"
version = "0.1.0"
description = "Autonomous development daemon — GitHub Projects → Claude Agent SDK → PRs"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
    "httpx",
    "msgspec",
    "pyyaml",
    "typer",
    "aiosqlite",
    "ruamel-yaml>=0.19.1",
]

[project.scripts]
adl = "auto_dev_loop.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auto_dev_loop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]
